added new files and updated home page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Page in Development</h1>
+    <main>
+        <h1>Artemis Orion</h1>
+        <h3>Projects I've Made</h3>
+        <div>A <a href="./projects/survey-form/index.html">Survey Form</a></div>
+        <div>A <a href="./projects/tribute/index.html">Tribute Page</a></div>
+    </main>
 </body>
 </html>
