--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
-        <h1>Artemis Orion</h1>
-        <h3>Projects I've Made</h3>
-        <div>A <a href="./projects/survey-form/index.html">Survey Form</a></div>
-        <div>A <a href="./projects/tribute/index.html">Tribute Page</a></div>
-    </main>
+    <div class="blur">
+        <main>
+            <h1 class="text">Artemis Orion</h1>
+            <div class="dividing-title"><h3 class="text">Projects I've Made</h3></div>
+            <div class="projects">
+                <div class="tribute"><a href="./projects/tribute/index.html">Tribute Page</a></div>
+                <div class="survey"><a href="./projects/survey-form/index.html">Survey Form</a></div>
+            </div>
+        </main>
+    </div>    
 </body>
 </html>
