--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <h1 class="text">Artemis Orion</h1>
             <div class="dividing-title"><h3 class="text">Projects I've Made</h3></div>
             <div class="projects">
-                <div class="tribute"><a href="./projects/tribute/index.html">Tribute Page</a></div>
-                <div class="survey"><a href="./projects/survey-form/index.html">Survey Form</a></div>
+                <!-- <div class="tribute"><a href="./projects/tribute/index.html">Tribute Page</a></div> -->
+                <!-- <div class="survey"><a href="./projects/survey-form/index.html">Survey Form</a></div> -->
             </div>
         </main>
     </div>    
